--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
             <div class="slider-wrapper" tabindex="0">
 
                 <div class="item">
-                    <img src="img/01.jpg" alt="Svezia" />
+                    <img :src="slides[activeImageIndex].image" :alt="slides[activeImageIndex].title" />
                     <div class="text">
-                        <h3>Svezia</h3>
+                        <h3> {{ slides[activeImageIndex].title }} </h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum corporis.
+                            {{ slides[activeImageIndex].text }}
                         </p>
                     </div>
                 </div>
