--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
                 <div class="thumbs">
                     <div class="prev"></div>
                     <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.jpg" alt="Svezia"/>
+
+                    <div class="thumb" v-for="(thumb, index) in slides" :class="(index === activeImageIndex) ? 'active' : ''">
+                        <img :src="thumb.image" :alt="thumb.title"/>
                     </div>
-                    <div class="thumb">
+                    <!-- <div class="thumb">
                         <img src="img/02.jpg" alt="Svizzera" />
                     </div>
                     <div class="thumb">
@@ -43,7 +44,7 @@
                     </div>
                     <div class="thumb">
                         <img src="img/05.jpg" alt="Paradise" />
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
